--- a/src/parts/banner-article-2.html
+++ b/src/parts/banner-article-2.html
@@ -10,9 +10,12 @@
         <div class="text">
           <div class="lines-wrapper">
             <div class="category">PODCAST</div>
-            <h3>Sports Content Kings: The Future of Streaming Sports</h3>
+          </div>
+          <h1 class="h3">Sports Content Kings: The Future of Streaming Sports</h1>
+          <div class="lines-wrapper">
             <p>September 25, 2023</p>
           </div>
+
           <div class="btn-wrap">
             <a href="#" class="btn btn-outline-secondary" data-id="copyUrl">
               <span class="btn-label-wrap">
@@ -21,16 +24,12 @@
               <span class="btn-arrow">
                 <span class="btn-arrow-inner">
                   <svg xmlns="http://www.w3.org/2000/svg" width="6" height="6" viewBox="0 0 6 6" fill="none">
-                    <path fill-rule="evenodd" clip-rule="evenodd"
-                      d="M4.23503 4.96611L0 0.731074L0.731074 0L4.96611 4.23503V1.09661H6V6H1.09661L1.09661 4.96611H4.23503Z"
-                      fill="#0B0B0B" />
+                    <path fill-rule="evenodd" clip-rule="evenodd" d="M4.23503 4.96611L0 0.731074L0.731074 0L4.96611 4.23503V1.09661H6V6H1.09661L1.09661 4.96611H4.23503Z" fill="#0B0B0B" />
                   </svg>
                 </span>
                 <span class="btn-arrow-inner">
                   <svg xmlns="http://www.w3.org/2000/svg" width="6" height="6" viewBox="0 0 6 6" fill="none">
-                    <path fill-rule="evenodd" clip-rule="evenodd"
-                      d="M4.23503 4.96611L0 0.731074L0.731074 0L4.96611 4.23503V1.09661H6V6H1.09661L1.09661 4.96611H4.23503Z"
-                      fill="#0B0B0B" />
+                    <path fill-rule="evenodd" clip-rule="evenodd" d="M4.23503 4.96611L0 0.731074L0.731074 0L4.96611 4.23503V1.09661H6V6H1.09661L1.09661 4.96611H4.23503Z" fill="#0B0B0B" />
                   </svg>
                 </span>
               </span>
