--- a/src/parts/block-careers-form.html
+++ b/src/parts/block-careers-form.html
@@ -2,52 +2,52 @@
   <div class="container-fluid">
     <div class="row justify-content-between">
       <div class="col-md-6 col-lg-4">
-        <div class="form-description fade-up">
-          <h3>APPLICATION <br />FORM</h3>
-          <p>Remember, the key to a successful application form is clarity, ease of use, and making sure that it aligns with the role and company culture. This approach will help you attract qualified candidates who are a good fit for the role you are offering.</p>
+        <div class="form-description">
+          <h3>APPLICATION FORM</h3>
+          <figure><img src="images/arrow-career.svg" alt="" /></figure>
         </div>
       </div>
       <div class="col-md-6 col-lg-8 col-xxl-7">
         <form action="#">
           <div class="row">
             <div class="col-lg-6">
-              <div class="field fade-up">
+              <div class="field">
                 <label for="control1" class="form-label">First Name *</label>
                 <input class="form-control" type="text" id="control1" placeholder="Enter First Name" />
               </div>
             </div>
             <div class="col-lg-6">
-              <div class="field fade-up">
+              <div class="field">
                 <label for="control2" class="form-label">Last Name *</label>
                 <input class="form-control" type="text" id="control2" placeholder="Enter Last Name" />
               </div>
             </div>
             <div class="col-lg-6">
-              <div class="field fade-up">
+              <div class="field">
                 <label for="control3" class="form-label">Company Name</label>
                 <input class="form-control" type="text" id="control3" placeholder="Enter Company Name" />
               </div>
             </div>
             <div class="col-lg-6">
-              <div class="field fade-up">
+              <div class="field">
                 <label for="control4" class="form-label">Job Title</label>
                 <input class="form-control" type="text" id="control4" placeholder="Enter Job Title" />
               </div>
             </div>
             <div class="col-lg-6">
-              <div class="field fade-up">
+              <div class="field">
                 <label for="control5" class="form-label">Email *</label>
                 <input class="form-control" type="email" id="control5" placeholder="Enter your email" />
               </div>
             </div>
             <div class="col-lg-6">
-              <div class="field fade-up">
+              <div class="field">
                 <label for="control6" class="form-label">Phone</label>
                 <input class="form-control" type="tel" id="control6" placeholder="Enter Contact Telephone" />
               </div>
             </div>
             <div class="col-12">
-              <div class="field fade-up">
+              <div class="field">
                 <label for="control7" class="form-label">Country *</label>
                 <select class="form-select" id="control7">
                   <option value="">Select Country from list</option>
@@ -60,38 +60,21 @@
               </div>
             </div>
             <div class="col-12">
-              <div class="field field-text fade-up">
+              <div class="field field-text">
                 <label for="control8" class="form-label">Message *</label>
                 <textarea class="form-control" id="control8" placeholder="Type message here"></textarea>
               </div>
             </div>
           </div>
-          <div class="form-check fade-up">
+          <div class="form-check">
             <input class="form-check-input" type="checkbox" value="" id="control9" />
             <label class="form-check-label" for="control9">I agree to receive communications from WSC Sports and accept the privacy policy</label>
           </div>
 
-          <div class="form-buttons hstack gap-2 fade-up">
+          <div class="form-buttons hstack gap-2">
             <button type="submit" class="btn btn-primary">
               <span class="btn-label-wrap">
                 <span class="btn-label" data-text="SUBMIT APPLICATION">SUBMIT APPLICATION</span>
-              </span>
-              <span class="btn-arrow">
-                <span class="btn-arrow-inner">
-                  <svg xmlns="http://www.w3.org/2000/svg" width="6" height="6" viewBox="0 0 6 6" fill="none">
-                    <path fill-rule="evenodd" clip-rule="evenodd" d="M4.23503 4.96611L0 0.731074L0.731074 0L4.96611 4.23503V1.09661H6V6H1.09661L1.09661 4.96611H4.23503Z" fill="#0B0B0B" />
-                  </svg>
-                </span>
-                <span class="btn-arrow-inner">
-                  <svg xmlns="http://www.w3.org/2000/svg" width="6" height="6" viewBox="0 0 6 6" fill="none">
-                    <path fill-rule="evenodd" clip-rule="evenodd" d="M4.23503 4.96611L0 0.731074L0.731074 0L4.96611 4.23503V1.09661H6V6H1.09661L1.09661 4.96611H4.23503Z" fill="#0B0B0B" />
-                  </svg>
-                </span>
-              </span>
-            </button>
-            <button type="reset" class="btn btn-outline-secondary">
-              <span class="btn-label-wrap">
-                <span class="btn-label" data-text="RESET FORM">RESET FORM</span>
               </span>
               <span class="btn-arrow">
                 <span class="btn-arrow-inner">
