--- a/src/parts/block-careers-share.html
+++ b/src/parts/block-careers-share.html
@@ -1,13 +1,11 @@
 <section class="block-careers-share bg-secondary text-white">
   <div class="container-fluid">
     <div class="wrapper">
-      <div class="careers-share-image fade-up"><img src="images/share-card.jpg" alt="" /></div>
+      <div class="careers-share-image"><img src="images/share-card.jpg" alt="" /></div>
       <div class="careers-share-text">
-        <div class="fade-up">
-          <p>We are all about sports here at WSC Sports, and we have some amazing sports teams for you to get stuck in to.</p>
-        </div>
+        <p>Keep your head in the game and don’t miss out on any action WSC Sports is part of.</p>
         <h2>Follow us</h2>
-        <div class="fade-up socials">
+        <div class="socials">
           <a href="#"><img src="images/share-inst.svg" alt="" /></a>
           <a href="#"><img src="images/share-linkedin.svg" alt="" /></a>
           <a href="#"><img src="images/share-yt.svg" alt="" /></a>
