--- a/src/parts/page-header-careers-single.html
+++ b/src/parts/page-header-careers-single.html
@@ -1,16 +1,8 @@
-<section class="page-header-career bg-primary">
+<section class="page-header-career">
   <div class="container-fluid">
-    <div class="row align-items-center justify-content-between">
-      <div class="col-md-6 col-xl-5">
-        <h1 class="h2">Customer Success Manager</h1>
-      </div>
-      <div class="col-md-6 col-xl-5 col-xxl-6">
-        <div class="fade-up">
-          <p>WSC Sports delivers an AI-powered automation video solution for real-time sports content creation and distribution and is the fastest-growing sports-tech company in the world.</p>
-        </div>
-      </div>
-    </div>
-    <div class="tags fade-up">
+    <a href="#" class="link-back">&lsaquo;BACK</a>
+    <h1>Junior GenAI/NLP Algorithm Developer</h1>
+    <div class="tags">
       <span>Australia </span>
       <span>Account Management</span>
       <span>Full Time</span>
