--- a/src/parts/page-header-careers.html
+++ b/src/parts/page-header-careers.html
@@ -1,8 +1,12 @@
-<section class="page-header-text">
+<section class="page-header-text page-header-text--careers">
   <div class="container-fluid">
-    <h1>teams of <br />innovation</h1>
-    <div class="fade-up">
-      <p>We are proud to have over 430 leading sports media organizations from over 42 countries around the world as our clients.</p>
+    <div class="lines-wrapper">
+      <h1>
+        Be the<br />
+        next player<br />
+        on our team
+      </h1>
+      <p>Join us on our mission to continue and transform the way sports media organizations around the world such as the NBA, YouTubeTV, LaLiga &amp; many others connect with their fans with the use of AI and video content</p>
     </div>
   </div>
 </section>
