--- a/src/parts/block-careers-list.html
+++ b/src/parts/block-careers-list.html
@@ -1,64 +1,6 @@
 <section class="block-careers-list">
   <div class="container-fluid">
-    <div class="block-title">
-      <h3>Ready to step into the arena of endless possibilities?</h3>
-      <h3>FIND YOUR NEXT OPPORTUNITY</h3>
-    </div>
-    <form action="#">
-      <div class="hstack gap-2 gap-xl-5 fade-in">
-        <div class="field">
-          <select class="form-select">
-            <option value="">All Locations</option>
-            <option value="1">Option 1</option>
-            <option value="2">Option 2</option>
-            <option value="3">Option 3</option>
-            <option value="4">Option 4</option>
-            <option value="5">Option 5</option>
-          </select>
-        </div>
-        <div class="field">
-          <select class="form-select">
-            <option value="">All Departments</option>
-            <option value="1">Option 1</option>
-            <option value="2">Option 2</option>
-            <option value="3">Option 3</option>
-            <option value="4">Option 4</option>
-            <option value="5">Option 5</option>
-          </select>
-        </div>
-      </div>
-    </form>
-
     <div class="list">
-      <h3>AUSTRALIA</h3>
-      <ul>
-        <li>
-          <a href="#">
-            <div class="d-flex align-items-center justify-content-between fade-in">
-              <span class="link-text">Customer Success Manager</span>
-              <div class="btn btn-outline-secondary btn-rounded">
-                <span class="btn-label-wrap">
-                  <span class="btn-label" data-text="View Position">View Position</span>
-                </span>
-                <span class="btn-arrow">
-                  <span class="btn-arrow-inner">
-                    <svg xmlns="http://www.w3.org/2000/svg" width="6" height="6" viewBox="0 0 6 6" fill="none">
-                      <path fill-rule="evenodd" clip-rule="evenodd" d="M4.23503 4.96611L0 0.731074L0.731074 0L4.96611 4.23503V1.09661H6V6H1.09661L1.09661 4.96611H4.23503Z" fill="#0B0B0B" />
-                    </svg>
-                  </span>
-                  <span class="btn-arrow-inner">
-                    <svg xmlns="http://www.w3.org/2000/svg" width="6" height="6" viewBox="0 0 6 6" fill="none">
-                      <path fill-rule="evenodd" clip-rule="evenodd" d="M4.23503 4.96611L0 0.731074L0.731074 0L4.96611 4.23503V1.09661H6V6H1.09661L1.09661 4.96611H4.23503Z" fill="#0B0B0B" />
-                    </svg>
-                  </span>
-                </span>
-              </div>
-            </div>
-            <div class="line"></div>
-          </a>
-        </li>
-      </ul>
-
       <h3>ISRAEL</h3>
       <ul>
         <li>
@@ -315,6 +257,56 @@
           </a>
         </li>
       </ul>
+      <h3>AUSTRALIA</h3>
+      <ul>
+        <li>
+          <a href="#">
+            <div class="d-flex align-items-center justify-content-between fade-in">
+              <span class="link-text">Customer Success Manager</span>
+              <div class="btn btn-outline-secondary btn-rounded">
+                <span class="btn-label-wrap">
+                  <span class="btn-label" data-text="View Position">View Position</span>
+                </span>
+                <span class="btn-arrow">
+                  <span class="btn-arrow-inner">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="6" height="6" viewBox="0 0 6 6" fill="none">
+                      <path fill-rule="evenodd" clip-rule="evenodd" d="M4.23503 4.96611L0 0.731074L0.731074 0L4.96611 4.23503V1.09661H6V6H1.09661L1.09661 4.96611H4.23503Z" fill="#0B0B0B" />
+                    </svg>
+                  </span>
+                  <span class="btn-arrow-inner">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="6" height="6" viewBox="0 0 6 6" fill="none">
+                      <path fill-rule="evenodd" clip-rule="evenodd" d="M4.23503 4.96611L0 0.731074L0.731074 0L4.96611 4.23503V1.09661H6V6H1.09661L1.09661 4.96611H4.23503Z" fill="#0B0B0B" />
+                    </svg>
+                  </span>
+                </span>
+              </div>
+            </div>
+            <div class="line"></div>
+          </a>
+        </li>
+      </ul>
+    </div>
+    <div class="list-more">
+      <h3>didn't find what you were looking for?</h3>
+      <div class="btn-wrapper">
+        <a href="#" class="btn btn-primary">
+          <span class="btn-label-wrap">
+            <span class="btn-label" data-text="see all positions">see all positions</span>
+          </span>
+          <span class="btn-arrow">
+            <span class="btn-arrow-inner">
+              <svg xmlns="http://www.w3.org/2000/svg" width="6" height="6" viewBox="0 0 6 6" fill="none">
+                <path fill-rule="evenodd" clip-rule="evenodd" d="M4.23503 4.96611L0 0.731074L0.731074 0L4.96611 4.23503V1.09661H6V6H1.09661L1.09661 4.96611H4.23503Z" fill="#0B0B0B" />
+              </svg>
+            </span>
+            <span class="btn-arrow-inner">
+              <svg xmlns="http://www.w3.org/2000/svg" width="6" height="6" viewBox="0 0 6 6" fill="none">
+                <path fill-rule="evenodd" clip-rule="evenodd" d="M4.23503 4.96611L0 0.731074L0.731074 0L4.96611 4.23503V1.09661H6V6H1.09661L1.09661 4.96611H4.23503Z" fill="#0B0B0B" />
+              </svg>
+            </span>
+          </span>
+        </a>
+      </div>
     </div>
   </div>
 </section>
