--- a/src/parts/block-home-4.html
+++ b/src/parts/block-home-4.html
@@ -29,12 +29,11 @@
             <div class="card-body">
               <div class="card-title">SPEED &amp; SCALE</div>
               <div class="card-icon">
-                <!-- <img src="images/icon06.svg" alt="" /> -->
                 <lottie-player class="lottie" loop src="json/speed-scale.json"></lottie-player>
               </div>
+              <p>“WSC Sports enables us to create unique content for every single digital platform that we touch globally. Now it takes a few minutes to create over 1,000 highlight packages.”</p>
               <div class="card-footer">
-                <p>“WSC Sports enables us to create unique content for every single digital platform that we touch globally. Now it takes a few minutes to create over 1,000 highlight packages.”</p>
-                <strong>Bob Carney, SVP of Emerging Media, NBA</strong>
+                <strong>Bob Carney, SVP of Emerging Media<span>NBA</span></strong>
                 <div class="card-logo"><img src="images/nba.png" alt="" /></div>
               </div>
             </div>
@@ -46,12 +45,11 @@
             <div class="card-body">
               <div class="card-title">Fan-Focused</div>
               <div class="card-icon">
-                <!-- <img src="images/icon08.svg" alt="" /> -->
                 <lottie-player class="lottie" loop src="json/fan-focused.json"></lottie-player>
               </div>
+              <p>“We foresee personalization down to the individual level, whether it be highlights of your favorite team, the players on your fantasy, or your preferred content type goals, skills, fans whatever it may be. WSC will play a key part in this puzzle.”</p>
               <div class="card-footer">
-                <p>“We foresee personalization down to the individual level, whether it be highlights of your favorite team, the players on your fantasy, or your preferred content type goals, skills, fans whatever it may be. WSC will play a key part in this puzzle.”</p>
-                <strong>Chris Schlosser, MLS’ Senior VP of Emerging Ventures</strong>
+                <strong>Chris Schlosser, MLS’ Senior VP of Emerging <span>Ventures</span></strong>
                 <div class="card-logo"><img src="images/espn.png" alt="" /></div>
               </div>
             </div>
@@ -63,12 +61,11 @@
             <div class="card-body">
               <div class="card-title">Innovation</div>
               <div class="card-icon">
-                <!-- <img src="images/icon07.svg" alt="" /> -->
                 <lottie-player class="lottie" loop src="json/innovation.json"></lottie-player>
               </div>
+              <p>“What helps me sleep at night is knowing that WSC is watching these trends as closely as we are, figuring out what’s next, and helping us to be prepared for it.“</p>
               <div class="card-footer">
-                <p>“What helps me sleep at night is knowing that WSC is watching these trends as closely as we are, figuring out what’s next, and helping us to be prepared for it.“</p>
-                <strong>Executive Producer and GM, Matt Carstens, ACCDN</strong>
+                <strong>Executive Producer and GM, Matt Carstens <span>ACCDN</span></strong>
                 <div class="card-logo"><img src="images/acc.png" alt="" /></div>
               </div>
             </div>
@@ -80,12 +77,11 @@
             <div class="card-body">
               <div class="card-title">IMPACT</div>
               <div class="card-icon">
-                <!-- <img src="images/icon05.svg" alt="" /> -->
                 <lottie-player class="lottie" loop src="json/impact.json"></lottie-player>
               </div>
+              <p>“The number of sessions per user has increased by more than 70%. We have [also] seen an increase of more than 30% from one year to the next”</p>
               <div class="card-footer">
-                <p>“The number of sessions per user has increased by more than 70%. We have [also] seen an increase of more than 30% from one year to the next”</p>
-                <strong>Alfredo Bermejo, Digital Strategy Director, LALIGA</strong>
+                <strong>Alfredo Bermejo, Digital Strategy Director <span>LALIGA</span></strong>
                 <div class="card-logo"><img src="images/laliga.png" alt="" /></div>
               </div>
             </div>
